<resources>
    <string name="app_name">MovieZone</string>

    <!-- HOME SCREEN -->
    <string name="movie_title_txt_home">Movie\nTitle</string>
    <string name="genre_txt_home">Genre, Subgenre</string>
    <string name="watch_trailer_btn_txt_home">Watch trailer</string>

    <!-- SCREEN -->
    <string name="sign_up_txt">Sign up</string>
    <string name="sign_in_txt">Sign in</string>
    <string name="profile_txt">Profile</string>
    <string name="search_txt">Search</string>
    <string name="account_txt">Account</string>
    <string name="privacy_policy_txt">Privacy policy</string>
    <string name="terms_txt">Terms</string>
    <string name="help_txt">Help</string>
    <string name="who_are_we_txt">Who are we?</string>
    <string name="feedback_txt">Feedback</string>
    <string name="changes_terms_txt">Changes to the Service and/or Terms</string>

    <string name="terms_placeholder_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.\n \nLorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>

    <!-- OPTIONS -->
    <string name="option_txt">Option</string>
    <string name="more_txt">More</string>

    <!-- SIGN UP SCREEN -->
    <string name="lets_get_started_txt">"Let's get started"</string>
    <string name="setup_account_txt">"First, let's create your account."</string>
    <string name="full_name_txt">Full name</string>
    <string name="email_txt">Email address</string>
    <string name="password_txt">Password</string>
    <string name="welcome_txt">Welcome!</string>
    <string name="enter_details_txt">Please, enter your details.</string>
    <string name="forgot_password_txt"><u>Forgot Password?</u></string>

    <!-- PROFILE SCREEN -->
    <string name="sign_out_txt">Sign out</string>

    <!-- ERRORS -->
    <string name="email_format_error">Email format is not correct.</string>

    <!-- MENU TITLES -->
    <string name="menu_home_title">Home</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_profile_title">Profile</string>

    <!-- PLACEHOLDERS -->
    <string name="placeholder_category">Category</string>
    <string name="placeholder_categories">Categories</string>
    <string name="placeholder_favorites">Favorites</string>
    <string name="placeholer_title">Title</string>
    <string name="placeholder_rating">4.6</string>
    <string name="placeholder_hello">Hello, Name Surname</string>
    <string name="placeholder_home_description">Let us show you what we got for you.</string>
    <string name="placeholder_discover">Discover</string>
    <string name="placeholder_now_playing">Now Playing</string>
    <string name="placeholder_upcoming">Upcoming</string>
    <string name="placeholder_top_rated">Top Rated</string>
    <string name="placeholder_movie_title">Movie Title</string>
    <string name="placeholder_year">1999</string>
    <string name="placeholder_runtime">128 minutes</string>
    <string name="placeholder_genre">Action</string>
    <string name="placeholder_watch_video">Watch Video</string>
    <string name="placeholder_story_line_title">Story Line</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum i sve ostale suplje sto idu uz tekst</string>
    <string name="placeholder_reviews_title">Reviews</string>
    <string name="placeholder_similar_movies_title">Similar Movies</string>
    <string name="placeholder_cast_title">Cast</string>
    <string name="placeholder_credits_name">Firstname\nLastname</string>
    <string name="placeholder_privacy_policy">Privacy policy</string>
    <string name="placeholder_help_and_feedback">Help and Feedback</string>
    <string name="placeholder_about_us">About Us</string>
    <string name="placeholder_date">10.10.2021</string>
    <string name="placeholder_search">Search a title</string>
    <string name="placeholder_no_results">No Results</string>
    <string name="placeholder_already_have_acc">Already have an account?</string>

    <!-- GENERAL TITLES -->
    <string name="crew_text">Crew</string>

    <!-- WEB CLIENT -->
    <string name="web_client_id">452378750265-96ef79hlif2nsuvbt5jl8li7fvnafng1.apps.googleusercontent.com</string>


</resources>