<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/back_button_background"
            android:src="@drawable/ic_back"
            android:scaleType="center"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="@id/tv_sign_in_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_sign_in_signin"
            app:layout_constraintEnd_toStartOf="@id/tv_sign_in_signin"/>

        <TextView
            android:id="@+id/tv_sign_in_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_txt"
            android:textSize="@dimen/h1_text_size"
            android:layout_marginTop="40sp"
            android:fontFamily="@font/sf_pro_display_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_welcome_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_txt"
            android:textSize="@dimen/h2_text_size"
            android:layout_marginTop="70sp"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_enter_details_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_details_txt"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_email_signin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:hint="@string/email_txt"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/light_gray"
            android:fontFamily="@font/sf_pro_display_light_italic"
            android:background="@drawable/custom_edit_text"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_details_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_password_signin"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:hint="@string/password_txt"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/light_gray"
            android:fontFamily="@font/sf_pro_display_light_italic"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/et_email_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_forgot_password_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_txt"
            android:textColor="@color/secondary_theme_color"
            android:clickable="true"
            android:layout_marginEnd="@dimen/forgot_password_margin_side"
            android:layout_marginTop="@dimen/forgot_password_margin_top"
            app:layout_constraintTop_toBottomOf="@id/et_password_signin"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_sign_in_signin"
            android:layout_width="0sp"
            android:layout_height="@dimen/button_default_height"
            android:padding="@dimen/button_padding"
            android:text="@string/sign_in_txt"
            android:textSize="@dimen/button_text_size"
            android:textAllCaps="false"
            android:layout_margin="@dimen/button_margin_side"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>