<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_m"
        android:background="@color/default_elements_background">

        <TextView
            android:id="@+id/tv_author_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_txt"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textColor="@color/secondary_theme_color"
            android:textSize="@dimen/h3_text_size"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/h3_text_size"
            android:autoSizeMinTextSize="@dimen/text_size_s"
            android:maxLength="@integer/max_text_view_length"
            android:layout_margin="@dimen/margin_l"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_rating_review"/>

        <ImageView
            android:id="@+id/iv_rating_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginStart="@dimen/margin_m"
            app:layout_constraintTop_toTopOf="@id/tv_author_review"
            app:layout_constraintBottom_toBottomOf="@id/tv_author_review"
            app:layout_constraintStart_toEndOf="@id/tv_author_review"/>

        <TextView
            android:id="@+id/tv_rating_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_rating"
            android:textColor="@color/rating_color"
            android:layout_marginStart="@dimen/margin_s"
            app:layout_constraintTop_toTopOf="@id/iv_rating_review"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating_review"
            app:layout_constraintStart_toEndOf="@id/iv_rating_review"/>

        <TextView
            android:id="@+id/tv_created_at_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textSize="@dimen/text_size_s"
            android:textAlignment="textEnd"
            android:alpha="0.5"
            android:layout_marginStart="@dimen/margin_m"
            app:layout_constraintTop_toTopOf="@id/tv_author_review"
            app:layout_constraintBottom_toBottomOf="@id/tv_author_review"
            app:layout_constraintEnd_toEndOf="@id/tv_content_review"
            app:layout_constraintStart_toEndOf="@id/tv_rating_review"/>

        <TextView
            android:id="@+id/tv_content_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_l"
            android:layout_marginStart="@dimen/margin_l"
            android:layout_marginEnd="@dimen/margin_l"
            android:layout_marginBottom="@dimen/margin_l"
            android:text="@string/placeholder_lorem_ipsum"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="@dimen/h2_text_size"
            android:autoSizeMinTextSize="@dimen/text_size_s"
            android:textAlignment="textStart"
            android:alpha="0.7"
            app:layout_constraintTop_toBottomOf="@id/tv_author_review"
            app:layout_constraintStart_toStartOf="@id/tv_author_review"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>