<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_xl"
        android:layout_margin="@dimen/margin_m"
        app:cardBackgroundColor="@color/default_elements_background"
        android:elevation="@dimen/elevation_s">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_poster_searchitem"
            android:layout_width="@dimen/search_item_poster_width"
            android:layout_height="@dimen/search_item_poster_height"
            android:src="@drawable/movie_collage"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_title_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholer_title"
            android:textSize="@dimen/h2_text_size"
            android:fontFamily="@font/sf_pro_display_bold"
            android:layout_marginStart="@dimen/margin_l"
            android:layout_marginTop="@dimen/margin_xl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_poster_searchitem"/>

        <ImageView
            android:id="@+id/iv_release_date_searchitem"
            android:layout_width="@dimen/option_icon_height"
            android:layout_height="@dimen/option_icon_width"
            android:layout_marginTop="@dimen/margin_m"
            android:src="@drawable/ic_calendar"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@id/tv_title_searchitem"
            app:layout_constraintStart_toStartOf="@id/tv_title_searchitem"/>

        <TextView
            android:id="@+id/tv_release_date_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:textSize="@dimen/text_size_s"
            android:text="@string/placeholder_year"
            android:textAlignment="center"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="@id/iv_release_date_searchitem"
            app:layout_constraintStart_toEndOf="@id/iv_release_date_searchitem"
            app:layout_constraintBottom_toBottomOf="@id/iv_release_date_searchitem"/>

        <ImageView
            android:id="@+id/iv_runtime_searchitem"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="@dimen/option_icon_height"
            android:layout_marginTop="@dimen/margin_m"
            android:src="@drawable/ic_clock"
            android:alpha="0.5"
            app:layout_constraintTop_toBottomOf="@id/iv_release_date_searchitem"
            app:layout_constraintStart_toStartOf="@id/iv_release_date_searchitem"/>

        <TextView
            android:id="@+id/tv_runtime_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:textSize="@dimen/text_size_s"
            android:text="@string/placeholder_runtime"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="@id/iv_runtime_searchitem"
            app:layout_constraintBottom_toBottomOf="@id/iv_runtime_searchitem"
            app:layout_constraintStart_toEndOf="@id/iv_runtime_searchitem"/>

        <ImageView
            android:id="@+id/iv_genre_searchitem"
            android:layout_width="@dimen/option_icon_width"
            android:layout_height="@dimen/option_icon_height"
            android:layout_marginTop="@dimen/margin_m"
            android:src="@drawable/ic_film"
            android:alpha="0.5"
            android:layout_marginBottom="@dimen/margin_xl"
            app:layout_constraintTop_toBottomOf="@id/iv_runtime_searchitem"
            app:layout_constraintStart_toStartOf="@id/iv_runtime_searchitem"/>

        <TextView
            android:id="@+id/tv_genre_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_s"
            android:textSize="@dimen/text_size_s"
            android:text="@string/placeholder_genre"
            android:alpha="0.5"
            app:layout_constraintTop_toTopOf="@id/iv_genre_searchitem"
            app:layout_constraintStart_toEndOf="@id/iv_genre_searchitem"
            app:layout_constraintBottom_toBottomOf="@id/iv_genre_searchitem"/>

        <ImageView
            android:id="@+id/iv_rating_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_s"
            android:src="@drawable/ic_star"
            android:layout_marginStart="@dimen/margin_xl"
            app:layout_constraintTop_toTopOf="@id/tv_title_searchitem"
            app:layout_constraintEnd_toStartOf="@id/tv_rating_searchitem"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_searchitem"/>

        <TextView
            android:id="@+id/tv_rating_searchitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/placeholder_rating"
            android:textColor="@color/rating_color"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_xl"
            app:layout_constraintTop_toTopOf="@id/iv_rating_searchitem"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating_searchitem"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>