<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_theme_color">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guide_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="1.4"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.1"
            android:orientation="vertical"/>

        <ImageView
            android:id="@+id/iv_movie_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:background="@drawable/home_default_movie_image"
            android:src="@drawable/shadow_effect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guide_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_title_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_title_txt_home"
            android:textSize="@dimen/h1_text_size"
            android:textAlignment="textStart"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/sf_pro_display_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guide_home"
            app:layout_constraintStart_toStartOf="@id/left_guide_home"/>

        <TextView
            android:id="@+id/tv_genre_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_txt_home"
            android:textColor="@color/primary_text_color"
            android:alpha="0.5"
            android:textSize="@dimen/h2_text_size"
            app:layout_constraintTop_toBottomOf="@id/tv_title_home"
            app:layout_constraintStart_toStartOf="@id/left_guide_home"/>

        <Button
            android:id="@+id/btn_watch_trailer"
            android:background="@drawable/default_button_design"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:text="@string/watch_trailer_btn_txt_home"
            android:textAllCaps="false"
            android:fontFamily="@font/sf_pro_display_bold"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_home"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guide_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
